--- a/Práctica de integración ecommerce/src/public/css/chat.css
+++ b/Práctica de integración ecommerce/src/public/css/chat.css
@@ -1,5 +1,5 @@
 body {
-  background-color: bisque;
+  background-color: azure;
   height: 100%;
 }
 
@@ -9,7 +9,7 @@ body {
 #chat-box {
   margin-top: 30px;
   padding-top: 25px;
-  border: 1px solid grey;
+  border: 1px solid rgb(1, 28, 63);
   height: 80%;
   width: 40%;
   overflow-y: auto;
@@ -23,12 +23,12 @@ body {
 
 #message-logs > li {
   padding: 0.5rem 1rem;
-  color: black;
+  color: rgb(29, 4, 4);
 }
 
 #message-logs > li:nth-child(odd) {
   background-color: grey;
-  color: black;
+  color: rgb(29, 4, 4);
 }
 
 @media (width < 1000px) {
